<resources>
    <string name="app_name">Learnira</string>
    <string name="powered_by">Powered By :</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="Vos_nottes">Vos Nottes</string>
    <string name="Qcm_disponible">QCM Disponible</string>
    <string name="i_am_a_teacher">I am a teacher</string>
    <string name="New_QCM">Créer un QCM</string>
    <string name="suivant">Suivant</string>
    <string name="Annuler">Annuler</string>
    <string name="Ajouter">Ajouter</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
</resources>